# rp2-atarist-rpikb

./: .gitignore  .gitmodules  AGENTS.md  README.md  build.sh  version.txt
src/: CMakeLists.txt  btloop.c  btstack_config.h  gconfig.c  hidinput.c  joystick.c  main.c  memmap_rp2-ikbd.ld  memmap_rp2-ikbd_copy_to_ram.ld  memmap_rp2-ikbd_default.ld  mouse.c  nativeloop.c  sdkconfig.h  serialp.c  stkeys.c  tusb_config.h  usbloop.c
src/6301/: 6301.c  6301.h  instr.c  ireg.c  memory.c  memory.h  sci.c  timer.c
src/include/: HD6301V1ST.h  btloop.h  constants.h  debug.h  gconfig.h  hidinput copy.h  hidinput.h  joystick.h  mouse.h  nativeloop.h  serialp.h  stkeys.h  usbloop.h
src/settings/: CMakeLists.txt  settings.c  settings.h
tests/atarist/: Makefile  build.sh
tests/atarist/src/: main.c  test_runner.c  timing_tests.c
tests/atarist/src/include/: test_runner.h  timing_tests.h
